--- a/src/netbeans/jshint/Bundle.properties
+++ b/src/netbeans/jshint/Bundle.properties
@@ -2,8 +2,8 @@ OpenIDE-Module-Display-Category=Web Applications
 OpenIDE-Module-Long-Description=\
     <a href="http://jshint.com/">JSHint</a> is a popular, community-driven tool to detect errors and potential problems in JavaScript code.\n\
     <br><br>\nThis project integrates JSHint into the NetBeans.\n\
-    <br><br>\nIt automatically validates files ending with "js" and adds warning markers and action items for every problem found by JSHint using ".jshintrc" configuration files from parent directories or the default JSHint configuration in case of no configuration file is found.\n\
-    <br><br>\nJSHint 2.7.0 included.
+    <br><br>\nIt automatically validates files ending with "js" and adds warning markers and action items for every problem found by JSHint using ".jshintrc" configuration files from project directories.\n\
+    <br><br>\nJSHint 2.9.2 included.
 OpenIDE-Module-Name=JSHint
 LBL_task=JSHint Errors
 DESC_task=Errors in JavaScript files reported by an embedded JSHint, according to their closest .jshintrc.
